# roc-optiq

./: .gitattributes  .gitignore  .gitmodules  AGENTS.md  BUILDING.md  CHANGES.md  CLAUDE.md  CMakeLists.txt  CMakePresets.json  CODING.md  CreateReleaseFolderStructure.cmd  Dockerfile.rhel8-test  JSONTestSuite  README.md  WARNINGS.md  build.cmd  claude.md  copyright  pkgbuild.cmd  version.pl  viewport-off-range.patch
.agents/: AGENTS.md  (+2 more)
rocprof-visual-data-model/: CMakeLists.txt  README.md
rocprof-visual-data-model/src/: main.cpp
rocprof-visual-data-model/src/data/: CffiInterface.h  CpuTrack.cpp  CpuTrack.h  DataFlow.h  EventRecord.cpp  EventRecord.h  EventTrack.cpp  EventTrack.h  GpuTrack.cpp  GpuTrack.h  MetricRecord.h  MetricTrack.cpp  MetricTrack.h  Trace.cpp  Trace.h  TraceInterface.cpp  TraceInterface.h  TraceTypes.h  Track.cpp  Track.h
rocprof-visual-data-model/src/database/: CffiInterface.h  Database.cpp  Database.h  DbInterface.cpp  DbInterface.h
rocprof-visual-data-model/src/database/sqlite/: SqliteDatabase.h  SqliteDatase.cpp
rocprof-visual-data-model/src/oat/: Dto.hpp  README.md  TestClient.hpp  TestComponent.hpp  TraceController.hpp  TraceControllerTest.cpp  TraceControllerTest.hpp  TraceService.cpp  TraceService.hpp
rocprof-visual-data-model/src/python/: cffi_build.py  cffi_invoke.py
rocprofvis-data-model/: CMakeLists.txt  README.md
rocprofvis-data-model/python/: cffi_build.py  cffi_run.py
rocprofvis-data-model/src/common/: CInterface.cpp  CInterface.h  CInterfaceTypes.h  CommonTypes.h  ErrorHandling.cpp  ErrorHandling.h  Interface.cpp  Interface.h  InterfaceTypes.h
rocprofvis-data-model/src/database/: Database.cpp  Database.h  Future.cpp  Future.h  ProfileDb.cpp  ProfileDb.h  RocpdDb.cpp  RocpdDb.h  RocprofDb.cpp  RocprofDb.h  SqliteDb.cpp  SqliteDb.h
rocprofvis-data-model/src/datamodel/: EventRecord.h  EventTrackSlice.cpp  EventTrackSlice.h  ExtData.cpp  ExtData.h  ExtDataRecord.h  FlowRecord.h  FlowTrace.cpp  FlowTrace.h  PmcRecord.h  PmcTrackSlice.cpp  PmcTrackSlice.h  RpvObject.cpp  RpvObject.h  StackRecord.h  StackTrace.cpp  StackTrace.h  Table.cpp  Table.h  TableRow.cpp  TableRow.h  Trace.cpp  Trace.h  Track.cpp  Track.h  TrackSlice.cpp  TrackSlice.h
rocprofvis-data-model/src/test/: main.cpp
src/app/wasm/: CMakeLists.txt  build.ps1  serve.py  shell.html  wasm_main.cpp
src/controller/: CMakeLists.txt
src/controller/inc/: rocprofvis_controller.h  rocprofvis_controller_ai_analysis.h  rocprofvis_controller_api.h  rocprofvis_controller_enums.h  rocprofvis_controller_process_executor.h  rocprofvis_controller_types.h  rocprofvis_profiler.h
src/controller/src/: rocprofvis_controller.cpp  rocprofvis_controller_ai_analysis.cpp  rocprofvis_controller_analysis.cpp  rocprofvis_controller_analysis.h  rocprofvis_controller_api.cpp  rocprofvis_controller_api_stringtable.cpp  rocprofvis_controller_arguments.cpp  rocprofvis_controller_arguments.h  rocprofvis_controller_array.cpp  rocprofvis_controller_array.h  rocprofvis_controller_call_stack.cpp  rocprofvis_controller_call_stack.h  rocprofvis_controller_compute_metrics.h  rocprofvis_controller_counter.cpp  rocprofvis_controller_counter.h  rocprofvis_controller_data.cpp  rocprofvis_controller_data.h  rocprofvis_controller_event.cpp  rocprofvis_controller_event.h  rocprofvis_controller_event_lod.cpp  rocprofvis_controller_event_lod.h  rocprofvis_controller_ext_data.cpp  rocprofvis_controller_ext_data.h  rocprofvis_controller_flow_control.cpp  rocprofvis_controller_flow_control.h  rocprofvis_controller_future.cpp  rocprofvis_controller_future.h  rocprofvis_controller_graph.cpp  rocprofvis_controller_graph.h  rocprofvis_controller_handle.cpp  rocprofvis_controller_handle.h  rocprofvis_controller_histogram.cpp  rocprofvis_controller_histogram.h  rocprofvis_controller_id.h  rocprofvis_controller_job_system.cpp  rocprofvis_controller_job_system.h  rocprofvis_controller_json_structs.h  rocprofvis_controller_json_trace.cpp  rocprofvis_controller_json_trace.h  rocprofvis_controller_mem_mgmt.cpp  (+54 more)
src/controller/src/compute/: rocprofvis_controller_compute_metrics.h  rocprofvis_controller_dispatch.cpp  rocprofvis_controller_dispatch.h  rocprofvis_controller_kernel.cpp  rocprofvis_controller_kernel.h  rocprofvis_controller_metrics_container.cpp  rocprofvis_controller_metrics_container.h  rocprofvis_controller_pc_sampling.cpp  rocprofvis_controller_pc_sampling.h  rocprofvis_controller_plot.h  rocprofvis_controller_plot_compute.cpp  rocprofvis_controller_plot_compute.h  rocprofvis_controller_plot_series.cpp  rocprofvis_controller_plot_series.h  rocprofvis_controller_roofline.cpp  rocprofvis_controller_roofline.h  rocprofvis_controller_table_compute.cpp  rocprofvis_controller_table_compute_pivot.cpp  rocprofvis_controller_table_compute_pivot.h  (+4 more)
src/controller/tests/: basic_tests.cpp  rocprofvis_controller_compute_tests.cpp  rocprofvis_controller_system_tests.cpp
src/core/: CMakeLists.txt
src/core/inc/: rocprof_vis_core.h  rocprofvis_core.h  rocprofvis_core_assert.h  rocprofvis_core_profile.h  rocprofvis_core_string_utils.h
src/core/src/: rocprof_vis_core.cpp  rocprofvis_core.cpp  rocprofvis_core_profile.cpp
src/model/: CMakeLists.txt  README.md
src/model/inc/: CInterface.h  CInterfaceTypes.h  Interface.h  InterfaceTypes.h  rocprofvis_c_interface.h  rocprofvis_c_interface_types.h  rocprofvis_interface.h  rocprofvis_interface_types.h  rocprofvis_remote_uri.h  rocprofvis_shared_types.h
src/model/python/: cffi_build.py  rocprofvis_cffi_build.py  rocprofvis_cffi_test.py
src/view/tests/: CMakeLists.txt  rocprofvis_ui_fake_data_provider.h  rocprofvis_ui_test_registry.cpp  rocprofvis_ui_test_registry.h  rocprofvis_ui_tests.cpp  rocprofvis_view_id_tests.cpp  rocprofvis_view_model_tests.cpp  rocprofvis_view_tests_main.cpp  rocprofvis_view_time_to_pixel_tests.cpp  rocprofvis_view_utils_tests.cpp
src/web/: CMakeLists.txt
src/web/frontend/: index.html
src/web/inc/: rocprofvis_json_middleware.h
src/web/src/: main.cpp  rocprofvis_json_middleware.cpp  rocprofvis_web_server.cpp  rocprofvis_web_server.h
(+707 files in other folders)
